Package_Tools/include-C/SFML/Graphics/Shader.h


extern sfShader* sfShader_createFromFile(const char* vertexShaderFilename, const char* geometryShaderFilename, const char* fragmentShaderFilename);
extern sfShader* sfShader_createFromMemory(const char* vertexShader, const char* geometryShader, const char* fragmentShader);
extern sfShader* sfShader_createFromStream(sfInputStream* vertexShaderStream, sfInputStream* geometryShaderStream, sfInputStream* fragmentShaderStream);
extern void sfShader_destroy(sfShader* shader);
extern void sfShader_setFloatUniform(sfShader* shader, const char* name, float x);
extern void sfShader_setVec2Uniform(sfShader* shader, const char* name, sfGlslVec2 vector);
extern void sfShader_setVec3Uniform(sfShader* shader, const char* name, sfGlslVec3 vector);
extern void sfShader_setVec4Uniform(sfShader* shader, const char* name, sfGlslVec4 vector);
extern void sfShader_setColorUniform(sfShader* shader, const char* name, sfColor color);
extern void sfShader_setIntUniform(sfShader* shader, const char* name, int x);
extern void sfShader_setIvec2Uniform(sfShader* shader, const char* name, sfGlslIvec2 vector);
extern void sfShader_setIvec3Uniform(sfShader* shader, const char* name, sfGlslIvec3 vector);
extern void sfShader_setIvec4Uniform(sfShader* shader, const char* name, sfGlslIvec4 vector);
extern void sfShader_setIntColorUniform(sfShader* shader, const char* name, sfColor color);
extern void sfShader_setBoolUniform(sfShader* shader, const char* name, sfBool x);
extern void sfShader_setBvec2Uniform(sfShader* shader, const char* name, sfGlslBvec2 vector);
extern void sfShader_setBvec3Uniform(sfShader* shader, const char* name, sfGlslBvec3 vector);
extern void sfShader_setBvec4Uniform(sfShader* shader, const char* name, sfGlslBvec4 vector);
extern void sfShader_setMat3Uniform(sfShader* shader, const char* name, const sfGlslMat3* matrix);
extern void sfShader_setMat4Uniform(sfShader* shader, const char* name, const sfGlslMat4* matrix);
extern void sfShader_setTextureUniform(sfShader* shader, const char* name, const sfTexture* texture);
extern void sfShader_setCurrentTextureUniform(sfShader* shader, const char* name);
extern void sfShader_setFloatUniformArray(sfShader* shader, const char* name, const float* scalarArray, size_t length);
extern void sfShader_setVec2UniformArray(sfShader* shader, const char* name, const sfGlslVec2* vectorArray, size_t length);
extern void sfShader_setVec3UniformArray(sfShader* shader, const char* name, const sfGlslVec3* vectorArray, size_t length);
extern void sfShader_setVec4UniformArray(sfShader* shader, const char* name, const sfGlslVec4* vectorArray, size_t length);
extern void sfShader_setMat3UniformArray(sfShader* shader, const char* name, const sfGlslMat3* matrixArray, size_t length);
extern void sfShader_setMat4UniformArray(sfShader* shader, const char* name, const sfGlslMat4* matrixArray, size_t length);
extern  void sfShader_setFloatParameter(sfShader* shader, const char* name, float x); 
extern  void sfShader_setFloat2Parameter(sfShader* shader, const char* name, float x, float y); 
extern  void sfShader_setFloat3Parameter(sfShader* shader, const char* name, float x, float y, float z); 
extern  void sfShader_setFloat4Parameter(sfShader* shader, const char* name, float x, float y, float z, float w); 
extern  void sfShader_setVector2Parameter(sfShader* shader, const char* name, sfVector2f vector); 
extern  void sfShader_setVector3Parameter(sfShader* shader, const char* name, sfVector3f vector); 
extern  void sfShader_setColorParameter(sfShader* shader, const char* name, sfColor color); 
extern  void sfShader_setTransformParameter(sfShader* shader, const char* name, sfTransform transform); 
extern  void sfShader_setTextureParameter(sfShader* shader, const char* name, const sfTexture* texture); 
extern  void sfShader_setCurrentTextureParameter(sfShader* shader, const char* name); 
extern unsigned int sfShader_getNativeHandle(const sfShader* shader);
extern void sfShader_bind(const sfShader* shader);
extern sfBool sfShader_isAvailable(void);
extern sfBool sfShader_isGeometryAvailable(void);